# football

./: CMakeLists.txt  README.md  classes.h  config.h  football.cc
code/: ball.cc  ball.h  classes.h  config.h  config.h.in  field.cc  field.h  football.cc  minimap.cc  minimap.h  player.cc  player.h  role.h  settings.h  side.h  team.cc  team.h
